[project]
name = "llmvision"
version = "0.1.0"
description = "A n application which enables to create face images from images pro"
authors = [
    {name = "Marie T. Feujio"}
]
readme = "README.md"
requires-python = "3.12.1"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
